--- a/img/css/style.css
+++ b/img/css/style.css
@@ -7,14 +7,56 @@
     box-sizing: border-box;
 }
 /*
+    FONT
+*/
+
+html {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+/*
     GENERAL
 */
 
 /*
     HEADER
 */
+.container-header {
+    background-color: #255EE9;
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
+}
 
-/*
+
+.discord {
+    flex-basis: 20%;
+    }
+
+.scarica {
+    flex-basis: 5%;
+}
+
+.perche-discord {
+    flex-basis: 9%;
+}
+
+.nitro {
+    flex-basis: 4%;
+}
+
+.sicurezza {
+    flex-basis: 6%;
+}
+
+.assistenza {
+    flex-basis: 6%;
+}
+    /*
     MAIN
 */
 
